<resources>
    <string name="app_name">看天气</string>
    <string name="action_settings">Settings</string>
    <string name="City">City:</string>
    <string name="Province">Province:</string>
    <string name="version">Version:0.3.0</string>
    <string name="InputHint">请在列表中选择要查询的城市，或者直接输入拼音：</string>
    <string name="inputCityName">input the city name</string>
    <string name="confirm">确定</string>
    <string name="loading">加载城市数据中，请稍后。。。\n数据量较大，耐心等不要乱动哦╮(╯▽╰)╭</string>
    <string name="city">City</string>
    <string name="pull_to_refresh">pull to refresh</string>
    <string name="updated_at">updated at %1$s</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednsday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_city">Add City</string>
    <string name="up_arrow">↑</string>
    <string name="down_arrow">↓</string>
    <string name="title_activity_widget_configuration">WidgetConfigurationActivity</string>
    <string name="widget_conf_submit">Make it!</string>
    <string name="select_city_please">Select city, please!</string>
</resources>
